fix word wrap on beds filter buttons

--- a/frontend/src/components/header/filters/popovers/bedroom-filter/bedroom-filter.scss
+++ b/frontend/src/components/header/filters/popovers/bedroom-filter/bedroom-filter.scss
@@ -29,6 +29,8 @@
       background: black;
       color: white;
       font-size: 16px;
+      padding: 0;
+      white-space: nowrap;
 
       &.inactive {
         background: white;
